--- a/localization/ar.json
+++ b/localization/ar.json
@@ -74,22 +74,6 @@
     "transform": "تحول",
     "gear_up": "تجهيز",
     "season": "الموسم",
-    "s1": "الموسم 1",
-    "s2": "الموسم 2",
-    "s3": "الموسم 3",
-    "s4": "الموسم 4",
-    "s5": "الموسم 5",
-    "s6": "الموسم 6",
-    "s7": "الموسم 7",
-    "s8": "الموسم 8",
-    "s9": "الموسم 9",
-    "s10": "الموسم 10",
-    "s_fortnite_og": "فورتنايت OG",
-    "c1": "الفصل 1",
-    "c2": "الفصل 2",
-    "c3": "الفصل 3",
-    "c4": "الفصل 4",
-    "c5": "الفصل 5",
     "sort": "ترتيب",
     "newest_first": "الأحدث أولاً",
     "oldest_first": "الأقدم أولاً",
@@ -115,5 +99,34 @@
     "days_ago_at": "منذ أيام في",
     "hours_ago_at": "منذ ساعات في",
     "minutes_ago_at": "منذ دقائق في",
-    "seconds_ago_at": "منذ ثواني في"
+    "seconds_ago_at": "منذ ثواني في",
+    "s1": "لفصل  ١، لموسم  ١",
+    "s2": "لفصل  ١، لموسم  ٢",
+    "s3": "لفصل  ١، لموسم  ٣",
+    "s4": "لفصل  ١، لموسم  ٤",
+    "s5": "لفصل  ١، لموسم  ٥",
+    "s6": "لفصل  ١، لموسم  ٦",
+    "s7": "لفصل  ١، لموسم  ٧",
+    "s8": "لفصل  ١، لموسم  ٨",
+    "s9": "لفصل  ١، لموسم  ٩",
+    "s10": "لفصل  ١، لموسم  ١٠",
+    "s11": "لفصل  ٢، لموسم  ١",
+    "s12": "لفصل  ٢، لموسم  ٢",
+    "s13": "لفصل  ٢، لموسم  ٣",
+    "s14": "لفصل  ٢، لموسم  ٤",
+    "s15": "لفصل  ٢، لموسم  ٥",
+    "s16": "لفصل  ٢، لموسم  ٦",
+    "s17": "لفصل  ٢، لموسم  ٧",
+    "s18": "لفصل  ٢، لموسم  ٨",
+    "s19": "لفصل  ٣، لموسم  ١",
+    "s20": "لفصل  ٣، لموسم  ٢",
+    "s21": "لفصل  ٣، لموسم  ٣",
+    "s22": "لفصل  ٣، لموسم  ٤",
+    "s23": "لفصل  ٤، لموسم  ١",
+    "s24": "لفصل  ٤، لموسم  ٢",
+    "s25": "لفصل  ٤، لموسم  ٣",
+    "s26": "لفصل  ٤، لموسم  ٤",
+    "s27": "Fortnite العودة",
+    "s28": "لفصل  ٥، لموسم  ١",
+    "s29": "لفصل  ٥، لموسم  ٢"
 }
