--- a/localization/en.json
+++ b/localization/en.json
@@ -74,22 +74,6 @@
     "transform": "Transform",
     "gear_up": "Gear Up",
     "season": "Season",
-    "s1": "Season 1",
-    "s2": "Season 2",
-    "s3": "Season 3",
-    "s4": "Season 4",
-    "s5": "Season 5",
-    "s6": "Season 6",
-    "s7": "Season 7",
-    "s8": "Season 8",
-    "s9": "Season 9",
-    "s10": "Season 10",
-    "s_fortnite_og": "Fortnite OG",
-    "c1": "Chapter 1",
-    "c2": "Chapter 2",
-    "c3": "Chapter 3",
-    "c4": "Chapter 4",
-    "c5": "Chapter 5",
     "sort": "sort",
     "newest_first": "Newest First",
     "oldest_first": "Oldest First",
@@ -106,14 +90,43 @@
     "first_seen": "First Seen",
     "never_released": "Never Released",
     "last_seen": "Last Seen",
-    "remind_me": "Remind Me",
+    "remind_me": "REMIND ME",
     "remind_me_desc": "By opting for the 'Remind Me' feature, you'll receive a notification as soon as this item becomes available in the itemshop, ensuring you don't miss out on its arrival.",
-    "rate": "Rate",
+    "rate": "RATE",
     "voters_p1": "Total of",
     "votersp_2": "votes",
-    "assets": "Assets",
+    "assets": "ASSETS",
     "days_ago_at": "days ago at",
     "hours_ago_at": "hours ago at",
     "minutes_ago_at": "minutes ago at",
-    "seconds_ago_at": "seconds ago at"
+    "seconds_ago_at": "seconds ago at",
+    "s1": "Chapter 1 - Season 1",
+    "s2": "Chapter 1 - Season 2",
+    "s3": "Chapter 1 - Season 3",
+    "s4": "Chapter 1 - Season 4",
+    "s5": "Chapter 1 - Season 5",
+    "s6": "Chapter 1 - Season 6",
+    "s7": "Chapter 1 - Season 7",
+    "s8": "Chapter 1 - Season 8",
+    "s9": "Chapter 1 - Season 9",
+    "s10": "Chapter 1 - Season X",
+    "s11": "Chapter 2 - Season 1",
+    "s12": "Chapter 2 - Season 2",
+    "s13": "Chapter 2 - Season 3",
+    "s14": "Chapter 2 - Season 4",
+    "s15": "Chapter 2 - Season 5",
+    "s16": "Chapter 2 - Season 6",
+    "s17": "Chapter 2 - Season 7",
+    "s18": "Chapter 2 - Season 8",
+    "s19": "Chapter 3 - Season 1",
+    "s20": "Chapter 3 - Season 2",
+    "s21": "Chapter 3 - Season 3",
+    "s22": "Chapter 3 - Season 4",
+    "s23": "Chapter 4 - Season 1",
+    "s24": "Chapter 4 - Season 2",
+    "s25": "Chapter 4 - Season 3",
+    "s26": "Chapter 4 - Season 4",
+    "s27": "Fortnite OG",
+    "s28": "Chapter 5 - Season 1",
+    "s29": "Chapter 5 - Season 2"
 }
