Added features to Shop

--- a/localization/ar.json
+++ b/localization/ar.json
@@ -128,5 +128,11 @@
     "s26": "لفصل  ٤، لموسم  ٤",
     "s27": "Fortnite العودة",
     "s28": "لفصل  ٥، لموسم  ١",
-    "s29": "لفصل  ٥، لموسم  ٢"
+    "s29": "لفصل  ٥، لموسم  ٢",
+    "battle_royale": "باتل رويال",
+    "juno": "ليقو",
+    "fetival": "مهرجان فورت نايت",
+    "delmar": "سباق روكت",
+    "item": "عنصر",
+    "items": "عناصر"
 }
