--- a/localization/en.json
+++ b/localization/en.json
@@ -128,5 +128,11 @@
     "s26": "Chapter 4 - Season 4",
     "s27": "Fortnite OG",
     "s28": "Chapter 5 - Season 1",
-    "s29": "Chapter 5 - Season 2"
+    "s29": "Chapter 5 - Season 2",
+    "battle_royale": "Battle Royale",
+    "juno": "LEGO® Fortnite",
+    "fetival": "Festival",
+    "delmar": "Rocket Racing",
+    "item": "item",
+    "items": "items"
 }
