--- a/localization/ar.json
+++ b/localization/ar.json
@@ -134,5 +134,6 @@
     "fetival": "مهرجان فورت نايت",
     "delmar": "سباق روكت",
     "item": "عنصر",
-    "items": "عناصر"
+    "items": "عناصر",
+    "updates_soon": "سوف يتم التحديث قريبا!"
 }
