--- a/localization/en.json
+++ b/localization/en.json
@@ -134,5 +134,6 @@
     "fetival": "Festival",
     "delmar": "Rocket Racing",
     "item": "item",
-    "items": "items"
+    "items": "items",
+    "updates_soon": "updates soon!"
 }
