--- a/localization/ar.json
+++ b/localization/ar.json
@@ -135,5 +135,6 @@
     "delmar": "سباق روكت",
     "item": "عنصر",
     "items": "عناصر",
-    "updates_soon": "سوف يتم التحديث قريبا!"
+    "updates_soon": "سوف يتم التحديث قريبا!",
+    "cosmetics": "العناصر"
 }
