--- a/localization/en.json
+++ b/localization/en.json
@@ -135,5 +135,6 @@
     "delmar": "Rocket Racing",
     "item": "item",
     "items": "items",
-    "updates_soon": "updates soon!"
+    "updates_soon": "updates soon!",
+    "cosmetics": "cosmetics"
 }
