--- a/localization/ar.json
+++ b/localization/ar.json
@@ -129,6 +129,7 @@
     "s27": "Fortnite العودة",
     "s28": "لفصل  ٥، لموسم  ١",
     "s29": "لفصل  ٥، لموسم  ٢",
+    "s30": "لفصل  ٥، لموسم  ٣",
     "battle_royale": "باتل رويال",
     "juno": "ليقو",
     "fetival": "مهرجان فورت نايت",
