--- a/localization/en.json
+++ b/localization/en.json
@@ -129,6 +129,7 @@
     "s27": "Fortnite OG",
     "s28": "Chapter 5 - Season 1",
     "s29": "Chapter 5 - Season 2",
+    "s30": "Chapter 5 - Season 3",
     "battle_royale": "Battle Royale",
     "juno": "LEGO® Fortnite",
     "fetival": "Festival",
