--- a/localization/ar.json
+++ b/localization/ar.json
@@ -137,5 +137,26 @@
     "item": "عنصر",
     "items": "عناصر",
     "updates_soon": "سوف يتم التحديث قريبا!",
-    "cosmetics": "العناصر"
+    "cosmetics": "العناصر",
+    "home": "الرئيسية",
+    "bookmarks": "الإشارات المرجعية",
+    "reminders": "التذكيرات",
+    "settings": "الإعدادات",
+    "account": "الحساب",
+    "friends": "الأصدقاء",
+    "contact": "اتصل بنا",
+    "discord": "ديسكورد",
+    "twitter": "تويتر",
+    "profile": "الملف الشخصي",
+    "profile_desc": "خصص ملفك الشخصي بصورة رمزية واسم مستخدم وسيرة ذاتية مخصصة. قم بإدارة إعدادات حسابك وتفضيلات الخصوصية بسهولة.",
+    "appearance": "المظهر",
+    "appearance_desc": "خصص مظهر تطبيقك من خلال علامة التبويب المظهر. اختر السمات والألوان وأحجام الخطوط لتناسب أسلوبك وتفضيلاتك.",
+    "notification": "الإشعارات",
+    "notification_desc": "قم بإدارة التنبيهات الخاصة بك من خلال علامة التبويب الإشعارات. اضبط تفضيلات التنبيهات الفورية والأصوات والتنبيهات داخل التطبيق للبقاء على اطلاع.",
+    "egs": "خدمات Epic Games",
+    "egs_desc": "اربط حسابك في Epic Games وأديره في علامة تبويب خدمات Epic Games. الوصول إلى إعدادات الحساب والحسابات المرتبطة والمزيد.",
+    "select_language": "اختر اللغة",
+    "secondray_color": "اللون الثانوي",
+    "color_appearance": "مظهر التلوين",
+    "language_appearance": "مظهر اللغة"
 }
