--- a/localization/en.json
+++ b/localization/en.json
@@ -137,5 +137,26 @@
     "item": "item",
     "items": "items",
     "updates_soon": "updates soon!",
-    "cosmetics": "cosmetics"
+    "cosmetics": "cosmetics",
+    "home": "Home",
+    "bookmarks": "Bookmarks",
+    "reminders": "Reminders",
+    "settings": "Settings",
+    "account": "Account",
+    "friends": "Friends",
+    "contact": "Contact Us",
+    "discord": "Discord",
+    "twitter": "Twitter",
+    "profile": "Profile",
+    "profile_desc": "Personalize your profile with a custom avatar, username, and bio. Manage your account settings and privacy preferences easily.",
+    "appearance": "Appearance",
+    "appearance_desc": "Customize your app's look with the Appearance tab. Choose themes, colors, and font sizes to suit your style and preferences.",
+    "notification": "Notification",
+    "notification_desc": "Manage your alerts with the Notification tab. Set preferences for push notifications, sounds, and in-app alerts to stay informed.",
+    "egs": "Epic Games Services",
+    "egs_desc": "Link and manage your Epic Games account in the Epic Games services tab. Access account settings, linked accounts, and more.",
+    "select_language": "Select Language",
+    "secondray_color": "Secondray Color",
+    "color_appearance": "Colorization Appearance",
+    "language_appearance": "Language Appearance"
 }
